# ai-chat

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  FLY_TROUBLESHOOTING.md  README.md  SETUP.md  STREAMING_FEATURE.md  deploy-fly.sh  docker-compose.yml  env.example  railway.json  start.sh  test_document.txt
backend/: DEPLOYMENT.md  Dockerfile  deploy.sh  fly.toml  init-uv.sh  migrate-to-uv.sh  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: chat.py  files.py  schemas.py
backend/app/core/: config.py  database.py
backend/app/models/: chat.py
backend/app/schemas/: chat.py  file.py
backend/app/services/: ai_service.py  file_service.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: ChatList.js  ChatWindow.js  FileUpload.js
frontend/src/services/: api.js
